--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="./images/cabecera.jpg" class="cabecera"/>
+            <img src="./images/cabecera.gif" class="cabecera"/>
         </header>
         <nav>
             <ul>
@@ -26,7 +26,7 @@
             <a href="#" class="flecha"><img src="./images/rigth_arrow.png"/></a>
             <div class="imagenes banner row">
             <a href="#" class="four columns"><img src="./images/acustica.jpg"/></a>
-            <a href="#" class="four columns"><img src="./images/electrica.jpg"/></a>
+            <a href="#" class="four columns"><img src="./images/guitarra.gif"/></a>
             <a href="#" class="four columns"><img src="./images/accesorios.jpg"/></a>
             </div>
         </div>
@@ -34,7 +34,7 @@
             <div class="main row">
                 <div class="primer parrafo">
                     <p>
-                        <img src="./images/principal1.jpg"/>
+                        <img src="./images/marshal.gif"/>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec,
                         mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed
                         eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit
